# tamed

./: .gitmodules  CMakeLists.txt  connection.h  connection_data.h  connection_data.inl  data_source.h  derived_optional.h  enum_map.h  handshake_operation.h  listen_operation.h  message_data_source.h  read_operation.h  send_data.h  server.h  stream_traits.h  write_operation.h
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
cmake/: tamed-config.cmake
examples/: CMakeLists.txt  server.cpp
include/: tamed.h
include/tamed/: config.h  connection.h  listen_operation.h  message_data_source.h  server.h  stream_traits.h
tests/: CMakeLists.txt
